# livro-aplic-lpa2v-cap01-controlador-lut-parte1-python

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMO_SUBSTITUIR.md  CONTRIBUTING.md  IMPORTAR_NO_GITHUB.md  README.md  SECURITY.md  pyproject.toml
assets/previews/: cp_lut_resultados.csv
docs/: book-context.md  project-overview.md  repository-structure.md
scripts/: pre_processa_erro_c04.py  simula_pid_c04_malha_fechada.py
src/cp_lut/: __init__.py  preprocessamento_c04.py  simulacao_c04.py
tests/: test_smoke.py
